# gamevault

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  unraid-template.xml
backend/: auth.py  config.py  database.py  main.py
backend/migrations/: m001_initial.py  m002_gallery.py  m003_specialk.py  m004_resanitize_annotations.py  m005_drop_tags.py  runner.py
backend/models/: annotation.py  game.py  screenshot.py  search.py  share.py  specialk_import.py  steam_import.py
backend/routers/: auth.py  gallery.py  games.py  metadata.py  screenshots.py  search.py  settings.py  share.py  specialk_import.py  steam_import.py  timeline.py  upload.py
backend/services/: annotation_renderer.py  filesystem.py  game_service.py  hdr_processor.py  image_processor.py  metadata_service.py  screenshot_service.py  search_service.py  share_service.py  specialk_import_service.py  steam_import_service.py  steam_scraper.py  timeline_service.py  upload_service.py
cli/: README.md  gamevault_sync.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  README.md  RELEASING.md  SECURITY_AUDIT_2026-04-27.md  USER_GUIDE.md
frontend/: package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_core_services.py  test_game_merge.py  test_phase4_steam_import.py  test_phase5_metadata_timeline.py  test_phase6_share_settings.py  test_security_phase1.py  test_security_phase2.py  test_security_phase3.py  test_specialk_hdr.py  test_steam_parsers.py  test_tone_map_cache.py
(+61 files in other folders)
